...
    

    var table = [Model]()
    override func viewDidLoad() {
        super.viewDidLoad()
        
        let test1 = Model(model: "Astra", company: "Opel", amount: 10)
        let test2 = Model(model: "Octavia", company: "Scoda", amount: 14)
        table.append(test1)
        table.append(test2)

    }

...
        return cell
    }
    
    func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath, for orientation: SwipeActionsOrientation) -> [SwipeAction]? {
        guard orientation == .right else { return nil }
        
        let deleteAction = SwipeAction(style: .destructive, title: "Delete") { action, indexPath in
            self.table.remove(at: indexPath.row)
            self.tableView.reloadData()
        }
        
        // customize the action appearance
        
...
